# astro-pwa-2

./: .gitignore  README.md  astro.config.mjs  iter.txt  package-lock.json  package.json
public/: manifest.json  sw.js
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
src/components/: About.astro  AddCardDialog.astro  Auth.astro  Auth.tsx  BottomNav.astro  Card.astro  Characters.astro  CharactersCount.astro  CharactersPattern.astro  Drawer.astro  Drawer.tsx  DrawerContent.astro  DrawerFromRght.tsx  Emails.astro  Emails.tsx  Encdec.astro  Generate.astro  GeneratePass.astro  GenerateQR.astro  KeyIv.astro  KeyIv.tsx  Mytab.astro  Mytext.astro  Nav.astro  QRCode.astro  RangeSlider.astro  RecentDelPass.astro  RecentDelPass.ts  RecentDelPass.tsx  RecordCards.astro  RecordCards.tsx  Records.astro  Slider.astro  Tabs.astro  TempList.astro  TempList.ts  TempList.tsx  TempListItems.tsx  ThemeToggle.astro  ToggleGroup.astro  (+23 more)
src/components/ui/: Card.astro  (+25 more)
src/layouts/: Layout.astro
src/logic/: auth.ts  email.ts  misc.ts  pass.ts  records.ts  tempList.ts
src/pages/: index.astro
src/pkg/: rust_lib.d.ts  rust_lib.js  rust_lib_bg.js  rust_lib_bg.wasm  rust_lib_bg.wasm.d.ts
src/server/: index.ts  permissions.ts  schemas.ts
src/styles/: animations.css  colors.css  corvu.css  drawer.css  global.css  layouts.css  popover.css  prose.css  reset.css  sizing.css  utilities.css
src/utils/: elementCreator.ts  elementUtils.ts  error.ts  query-helper.ts  state.ts  surrealdb-cloud.ts  surrealdb-indexed.ts  surrealdb-utils.ts  surrealdb.ts  syncLayer.ts  trpc.ts  waitForElement.ts
