[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
	
[profile.release]
lto = true
strip = true
	

[dependencies]
wasm-bindgen = "0.2.92"
base64 = "0.21.7"
aes = "0.8.3"
ofb = "0.6.1"
random_word = { version = "0.4.3", features = ["en"] }
rand = "0.9.0-alpha.0"
getrandom = { version = "0.2", features = ["js"] }
zxcvbn = "2"

